--- a/.pylintrc
+++ b/.pylintrc
@@ -4,6 +4,7 @@ disable=
       C0115, # Missing-class-docstring
       C0116, # missing-function-docstring
       W0703, # Catching to general exception Exception
+      W0719, # broad-exception-raised
       R0903, # too-few-public-methods
 
 # Analyse import fallback blocks. This can be used to support both Python 2 and
